# bevy_dev

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/shaders/: prototype_material.wgsl
docs/features/: debug_camera.md  prototype_material.md
examples/: prototype_material.rs
src/: debug_camera.rs  lib.rs  prelude.rs  prototype_material.rs
src/debug_camera/: controller.rs  focus.rs  initialization.rs  mod.rs  ui.rs
src/ui/: mod.rs  popup.rs
