[package]
name = "bevy_dev"
version = "0.3.0"
authors = ["Vixen <infvix@gmail.com>"]
description = "Dev tools for Bevy Engine"
keywords = ["prototype", "devtools", "textures", "assets"]
categories = ["game-engines", "game-development"]
readme = "README.md"
repository = "https://github.com/Vixenka/bevy_dev"
license = "MIT"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_render",
    "bevy_pbr",
    "png",
] }
random_color = "0.8.0"
rust-embed = "8.3.0"
uuid = "1.7.0"

bevy_egui = { version = "0.26.0", optional = true }

[dev-dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_winit",
    "tonemapping_luts",
] }
