[package]
name = "bevy_dev"
version = "0.5.0"
authors = ["Vixen <infvix@gmail.com>"]
description = "Dev tools for Bevy Engine"
keywords = ["prototype", "devtools", "textures", "assets"]
categories = ["game-engines", "game-development"]
readme = "README.md"
repository = "https://github.com/Vixenka/bevy_dev"
license = "MIT"
edition = "2021"

[features]
default = ["ui"]
ui = ["dep:bevy_egui"]

[dependencies]
bevy = {version = "0.16"}
random_color = "0.8.0"
rust-embed = "8.3.0"
uuid = "1.7.0"

bevy_egui = { version = "0.34", optional = true }
