[package]
name = "bevy_dev"
version = "0.7.0"
authors = ["Vixen <hello@vixenka.com>"]
description = "Dev tools for Bevy Engine"
keywords = ["prototype", "devtools", "textures", "assets"]
categories = ["game-engines", "game-development"]
readme = "README.md"
repository = "https://github.com/Vixenka/bevy_dev"
license = "MIT"
edition = "2024"

[features]
default = ["ui"]
ui = ["dep:bevy_egui"]

[dependencies]
bevy = "0.16"
random_color = "1"
rust-embed = "8"
uuid = "1"

bevy_egui = { version = "0.36", optional = true }
